--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Whatsapp Backup Viewer",
-  "short_name": "Backup Viewer",
+  "short_name": "Whatsapp Backup",
   "start_url": "https://yiheinchai.github.io/whatsapp-backup-viewer/",
   "scope": ".",
   "background_color": "#6dcdb1",
